RESOLVED FIXED61899
REGRESSION: inline style is lost when deleting line break between paragraphs with same style
https://bugs.webkit.org/show_bug.cgi?id=61899
Summary REGRESSION: inline style is lost when deleting line break between paragraphs ...
Ryosuke Niwa
Reported 2011-06-01 18:48:51 PDT
Created attachment 95698 [details] demo The attachment demonstrates the bug. When two paragraphs have same style, deleting a line break between them results in the second paragraph losing its font style.
Attachments
demo (386 bytes, text/html)
2011-06-01 18:48 PDT, Ryosuke Niwa
no flags
fixes the bug (4.89 KB, patch)
2011-06-01 18:54 PDT, Ryosuke Niwa
eric: review+
Ryosuke Niwa
Comment 1 2011-06-01 18:54:27 PDT
Created attachment 95699 [details] fixes the bug
Eric Seidel (no email)
Comment 2 2011-06-02 08:27:42 PDT
Comment on attachment 95699 [details] fixes the bug OK. Do we need to add a comment to document the ordering? Or is it obvious from the code?
Ryosuke Niwa
Comment 3 2011-06-02 10:04:46 PDT
(In reply to comment #2) > (From update of attachment 95699 [details]) > OK. Do we need to add a comment to document the ordering? Or is it obvious from the code? It must be obvious from the code (at least to me). Also changing the order will make the added test to fail :)
Ryosuke Niwa
Comment 4 2011-06-02 12:08:01 PDT
Ryosuke Niwa
Comment 5 2011-06-02 12:08:50 PDT
Thanks for the review!
Adele Peterson
Comment 6 2011-06-02 12:15:00 PDT
Ademar Reis
Comment 7 2011-06-03 09:14:25 PDT
Revision r87937 cherry-picked into qtwebkit-2.2 with commit dbda3e9 <http://gitorious.org/webkit/qtwebkit/commit/dbda3e9>
Note You need to log in before you can comment on or make changes to this bug.